--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-disqus": "~1.1.0",
     "angular-growl": "~0.4.0",
-    "marked": "~0.3.0"
+    "marked": "~0.3.0",
+    "angulartics": "~0.8.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.9",
