--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "cesarandreu",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "dependencies": {
     "angular": "1.2.9",
     "json3": "~3.2.6",
@@ -17,7 +17,8 @@
     "angular-disqus": "~1.1.0",
     "angular-growl": "~0.4.0",
     "marked": "~0.3.0",
-    "angulartics": "~0.8.7"
+    "angulartics": "~0.8.7",
+    "angular-animate": "~1.2.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.9",
