--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,15 @@
   "name": "cesarandreu",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "1.2.9",
+    "angular": "1.2.10",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.10.2",
     "bootstrap": "~3.0.3",
-    "angular-resource": "1.2.9",
-    "angular-cookies": "1.2.9",
-    "angular-sanitize": "1.2.9",
-    "angular-route": "1.2.9",
+    "angular-resource": "1.2.10",
+    "angular-cookies": "1.2.10",
+    "angular-sanitize": "1.2.10",
+    "angular-route": "1.2.10",
     "angular-bootstrap": "~0.10.0",
     "angular-marked": "Hypercubed/angular-marked",
     "lodash": "~2.4.1",
@@ -18,10 +18,10 @@
     "angular-growl": "~0.4.0",
     "marked": "~0.3.0",
     "angulartics": "~0.8.7",
-    "angular-animate": "~1.2.10"
+    "angular-animate": "1.2.10"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.9",
-    "angular-scenario": "1.2.9"
+    "angular-mocks": "1.2.10",
+    "angular-scenario": "1.2.10"
   }
 }
