--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,10 @@
     "angular-growl": "~0.4.0",
     "marked": "~0.3.0",
     "angulartics": "~0.8.7",
-    "angular-animate": "1.2.10"
+    "angular-animate": "1.2.10",
+    "angular-ui-router": "0.2.8-bowratic-tedium",
+    "angular-promise-tracker": "~1.5.1",
+    "angular-cache": "~2.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.10",
