--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "angular-disqus": "~1.1.0",
     "angular-growl": "~0.4.0",
     "marked": "~0.3.0",
-    "angulartics": "~0.8.7",
+    "angulartics": "master",
     "angular-animate": "1.2.10",
     "angular-ui-router": "0.2.8-bowratic-tedium",
     "angular-promise-tracker": "~1.5.1",
